--- a/src/app/Components/order-placed/order-placed.component.html
+++ b/src/app/Components/order-placed/order-placed.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="main-div">
   <div class="icon-div">
     <img src="../../../assets/icon/orderPlaced.svg" alt="" />
@@ -6,7 +7,7 @@
   <div class="success-order-placed">
     <span>
       hurray!!! your order is confirmed <br />
-      the order id is #123456 save the order id for <br />
+      <!-- the order id is #{{Id}} save the order id for <br /> -->
       further communication..
     </span>
   </div>
@@ -23,4 +24,3 @@
     </tr>
   </table>
 </div>
-<app-footer></app-footer>
