--- a/src/app/Components/dashboard/dashboard.component.scss
+++ b/src/app/Components/dashboard/dashboard.component.scss
@@ -36,22 +36,24 @@ $theme: #a03037;
   }
 }
 .grid-list-div {
-  margin-top: 0%;
-  margin-left: 8%;
-  margin-right: 8%;
-  height: 70%;
+  margin: 0% 8% 0% 8% ;
+  // border-style: ridge;
+  padding: 0% 1% 3% 0% ;
+  border-color:$white;
+  height: fit-content;
   mat-grid-list {
-    background-color:$white;
+    margin: 0% 0% 4% 0% ;  // want to change come here
+    background-color: $white;
     mat-grid-tile {
       background-color: $bookbg;
-      border: 1px solid #E2E2E2;
+      border: 1px solid #e2e2e2;
       border-radius: 3px;
       .grid-header {
         background-color: $bookbg;
         height: 50%;
         img {
           margin-left: 25%;
-          border-radius: 2px 2px 0px 0px;  //
+          border-radius: 2px 2px 0px 0px; //
           height: 80%;
           border: 1px; //
           border-style: groove; //
@@ -82,6 +84,14 @@ $theme: #a03037;
             width: 110px;
             background-color: $theme;
             font: normal normal medium 11px/13px roboto;
+          }
+          .added-cart-btn {
+            margin-right: 10px;
+            height: 35px;
+            width: 220px;
+            font: normal normal medium 11px/13px roboto;
+            background: #3371b5 0% 0% no-repeat padding-box;
+            border-radius: 2px;
           }
           .wish-list-btn {
             height: 35px;
