--- a/src/app/Components/header/header.component.scss
+++ b/src/app/Components/header/header.component.scss
@@ -16,14 +16,12 @@ $white: #ffffff;
     height: 2rem;
     width: 35rem;
     margin-left: 5rem;
-    margin-right: 10rem;
+    margin-right: 5rem;
     background-color: $white;
     form.search-input-box {
-      // background-color: rgb(73, 241, 247);
       border: none;
       padding: 0;
       input.search-input-box {
-        // border-style: dotted;
         height: 2.1rem;
         width: 32rem;
         border: 1px solid #555;
@@ -36,57 +34,60 @@ $white: #ffffff;
     }
   }
   .login-icon {
-    height: 30px;
-    margin: -1% 2% 0% 0%;
-
-    img {
-      height: 50px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    padding: 2% 2% 0% 0%;
+    width: 4rem;
+    height: 100%;
+    mat-icon {
+      color: #ffffff;
+      padding: 0% 0% 0% 20%;
+      width: 40px;
+    }
+    p {
+      display: flex;
+      font: normal normal normal 12px/13px Roboto;
+      letter-spacing: 0.45px;
+      color: #ffffff;
     }
   }
+
   .cart-div {
     display: flex;
+    margin: -1% 0% 0% 2%;
+    height: 25px;
+    width: 27px;
     .cart-text {
       font: normal normal normal 12px/13px Roboto;
       letter-spacing: 0.45px;
       color: #ffffff;
-      // margin-right: 10px;
-      // margin-top: 14px;
-      margin:68% 0% 0% -30% ;
+      margin: 120% 0% 0% -22px;
     }
     .cart-count {
       color: $theme;
       background-color: $white;
       padding: 10px;
-      margin-bottom: 16px;
-      margin-left: -11px;
-      opacity: 50%; //
+      opacity: 50%;
       border-radius: 100%;
+      margin: -9px 0px 10px -7px;
+      padding-top: -10%;
       font: normal normal bold 13px/5px roboto;
       letter-spacing: 0px;
       color: #a03037;
     }
+    .cart-count1 {
+      color: $theme;
+      background-color: $white;
+      padding: 10px;
+      margin-bottom: 16px;
+      margin-left: -11px;
+      opacity: 0%;
+      border-radius: 100%;
+      font: normal normal bold 13px/5px roboto;
+      letter-spacing: 0px;
+      color: #a03037;
+      background-color: #a03037;
+    }
   }
 }
-
-//
-//   input.search-input-box {
-//     border: 1px solid #555;
-//     width: 100%;
-//     padding: 9px 4px 9px 40px;
-//     background: transparent
-//       url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' class='bi bi-search' viewBox='0 0 16 16'%3E%3Cpath d='M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z'%3E%3C/path%3E%3C/svg%3E")
-//       no-repeat 13px center;
-//     height: 2rem;
-//     width: 30rem;
-//     margin-left: 40px;
-//   }
-//   .cart-icon {
-//   }
-//   margin-left: 5rem;
-//   span {
-//     margin-right: 1rem;
-//     font: normal normal normal 17px/13px Roboto;
-//     letter-spacing: 0.45px;
-//     color: $white;
-//   }
-// }
