more changes in book store

--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -12,7 +12,7 @@
           <button class="decrease-btn" (click)="decrease(cartBook.bookId)">-</button>
           <input class="quantity-box" type="text" disabled [value]="userCart.quantity[i]" />
           <button class="increase-btn" (click)="increase(cartBook.bookId)">+</button>
-          <button class="remove-btn" (click)="removeQuantity(cartBook.bookId)">Remove</button>
+          <button class="remove-btn" (click)="removeBook(cartBook.bookId)">Remove</button>
         </div>
       </div>
     </div>
