--- a/src/app/Components/cart/cart.component.scss
+++ b/src/app/Components/cart/cart.component.scss
@@ -4,6 +4,7 @@ $authurName: #9d9d9d;
 
 .main-div {
   height: 100%;
+  margin-top: 6%;
   .my-cart-div {
     margin: 2% 21% 2% 10%;
     height: fit-content;
