--- a/src/app/Components/order-placed/order-placed.component.html
+++ b/src/app/Components/order-placed/order-placed.component.html
@@ -7,7 +7,7 @@
   <div class="success-order-placed">
     <span>
       hurray!!! your order is confirmed <br />
-      <!-- the order id is #{{Id}} save the order id for <br /> -->
+      the order id is #{{Id}} save the order id for <br />
       further communication..
     </span>
   </div>
