--- a/src/app/Components/order-placed/order-placed.component.scss
+++ b/src/app/Components/order-placed/order-placed.component.scss
@@ -1,5 +1,5 @@
 .main-div {
-  // border-style: dashed;
+  margin-top: 6%;
   .icon-div {
     margin: 4% 0% 0% 43%;
   }
@@ -9,10 +9,8 @@
   .success-order-placed {
     margin: 0% 35% 2% 36%;
     text-align: center;
-    // border-style: dashed;
   }
   .contact-table {
-    // border-style: dashed;
     background: #fafafa 0% 0% no-repeat padding-box;
     border: 1px solid #dcdcdc;
     margin: 0% 20% 0% 25%;
@@ -20,16 +18,13 @@
       background: #fafafa 0% 0% no-repeat padding-box;
       border: 1px solid #dcdcdc;
       th {
-        // border-style: dashed;
         background: #fafafa 0% 0% no-repeat padding-box;
-        // border: 1px solid #dcdcdc;
       }
       td {
         background: #ffffff 0% 0% no-repeat padding-box;
         border: 1px solid #dcdcdc;
         height: 70px;
         text-align: center;
-        // border-style: dotted;
       }
     }
   }
