--- a/src/app/Components/dashboard/dashboard.component.scss
+++ b/src/app/Components/dashboard/dashboard.component.scss
@@ -8,6 +8,7 @@ $theme: #a03037;
   display: flex;
   margin-left: 8%;
   margin-right: 6%;
+  margin-top: 6%;
   .heading-div {
     display: flex;
     margin-left: 0%;
@@ -106,4 +107,15 @@ $theme: #a03037;
       }
     }
   }
+}
+
+.paginator{
+  display: flex;
+  justify-content: center;
+}
+
+.tooltip{
+  background-color: white;
+  text-decoration-color: #0a0102;
+
 }
