--- a/src/app/Components/login/login.component.scss
+++ b/src/app/Components/login/login.component.scss
@@ -1,9 +1,9 @@
 .main-div {
   margin: 0% 0% 0% 0%;
-  // width: 100%;
-  height: 768px;
-  background-color: #a1a0a0;
-  padding: 4% 0% 0% 13%;
+  height: 100%;
+  background-color: rgb(150, 149, 149);
+  padding: 9% 0% 0% 13%;
+  z-index: 123432;  //kuch bhi daal do
   // background: #000000 0% 0% no-repeat padding-box;
   // opacity: 0.31;
   .img-div {
@@ -81,7 +81,7 @@
       height: 45px;
       width: 80%;
       margin: 10% 10% 0% 10%;
-      border-style: dotted;
+      // border-style: dotted;
       color: white;
       background: #a03037 0% 0% no-repeat padding-box;
       border-radius: 3px;
@@ -102,16 +102,17 @@
       }
     }
     .fb-signin-btn {
-      border-style: dashed;
+      // border-style: dashed;
       width: 35%;
       margin: 4% 0% 0% 10%;
       border-radius: 3px;
       opacity: 1;
       color: white;
       background: #4266b2 0% 0% no-repeat padding-box;
+      z-index: 1;
     }
     .google-signin-btn {
-      border-style: dashed;
+      // border-style: dashed;
       width: 35%;
       margin: 4% 0% 0% 10%;
       background: #F5F5F5 0% 0% no-repeat padding-box;
@@ -143,55 +144,3 @@
     }
   }
 }
-
-// .main-div {
-//   border-style: dashed;
-//   height: 100%;
-//   background: #b3b0b0 no-repeat padding-box;
-//   opacity: 90%;
-//   .img-div {
-//     border-style: dotted;
-//     margin: 7% 30% 0% 17%;
-//     height: 60%;
-//     width: 27%;
-//     opacity: 100%;
-//     padding: 3% 0% 0% 3%;
-//     background: #f5f5f5 0% 0% no-repeat padding-box;
-//     border-radius: 21px;
-//     .online-shop-img {
-//       margin: 0% 0% 6% 0%;
-//       height: 300px;
-//       border-radius: 50%;
-//     }
-//     span {
-//       margin: 14% 0% 0% 13%;
-//       font: normal normal bold 18px/24px Roboto;
-//       letter-spacing: 0px;
-//       color: #0a0102;
-//       text-transform: uppercase;
-//     }
-//   }
-//   .login-signup-tabs {
-//     opacity: 100%;
-//     margin: -35% 0% 0% 46%;
-//     height: 77%;
-//     width: 40%;
-//     border-style: dashed;
-//     background: #ffffff 0% 0% no-repeat padding-box;
-//     box-shadow: 0px 5px 15px #00000029;
-//     border: 1px solid #e4e4e4;
-//     border-radius: 8px;
-//     .tab-group{
-//       width: 70%;
-//         border-style: dashed;
-//         color: aqua;
-//         background-color: blue;
-//         .login-tab{
-//           text-align: center;
-
-//         }
-
-//     }
-
-//   }
-// }
