--- a/src/app/Components/dashboard/dashboard.component.html
+++ b/src/app/Components/dashboard/dashboard.component.html
@@ -26,9 +26,14 @@
                   <span>{{book.authorName}}</span><br />
                   <p><br /><b>Rs.{{book.price}}</b></p>
                   <div class="buttons">
-                    <button class="add-cart-btn" *ngIf="bookIdList.includes(book.bookId)==false" (click)="addtoCartPushId(book.bookId,1)" mat-button>ADD TO BAG</button>
-                    <button class="added-cart-btn" *ngIf="bookIdList.includes(book.bookId)==true" (click)="removeBook(book.bookId)" mat-button>ADDED TO BAG</button>
-                    <button class="wish-list-btn" *ngIf="bookIdList.includes(book.bookId)==false" routerLink="/wishlist" mat-button>WISHLIST</button>
+                    <div>
+                      <button class="add-cart-btn" *ngIf="bookIdList.includes(book.bookId)==false" (click)="addtoCartPushId(book.bookId,1)" mat-button>ADD TO BAG</button>
+                      <button class="added-cart-btn" *ngIf="bookIdList.includes(book.bookId)==true" (click)="removeBookFromCart(book.bookId)" mat-button>ADDED TO BAG</button>
+                    </div>
+                    <div>
+                      <button class="wish-list-btn" *ngIf="bookIdWishList.includes(book.bookId)==false" (click)="addToWishList(book.bookId)" mat-button>WISHLIST</button>
+                      <button class="added-wish-list-btn" *ngIf="bookIdWishList.includes(book.bookId)==true" (click)="removeBookFromWishlist(book.bookId)" mat-button>WISHLIST</button>
+                    </div>
                   </div>
                 </mat-grid-tile-footer>
               </mat-grid-tile>
