--- a/src/app/Components/dashboard/dashboard.component.scss
+++ b/src/app/Components/dashboard/dashboard.component.scss
@@ -77,6 +77,7 @@ $theme: #a03037;
           color: $bookName;
         }
         .buttons {
+          display: flex;
           color: $white;
           margin-top: 10%;
           .add-cart-btn {
@@ -101,6 +102,15 @@ $theme: #a03037;
             border: 1px solid #9d9d9d;
             border-radius: 2px;
             background-color: $white;
+            font: normal normal medium 11px/13px roboto;
+          }
+          .added-wish-list-btn {
+            height: 35px;
+            width: 90px;
+            color: $white;
+            border: 1px solid #9d9d9d;
+            border-radius: 2px;
+            background-color: #3371b5;
             font: normal normal medium 11px/13px roboto;
           }
         }
