--- a/src/app/Components/wishlist/wishlist.component.scss
+++ b/src/app/Components/wishlist/wishlist.component.scss
@@ -5,34 +5,43 @@ $authurName: #9d9d9d;
 .main-div {
   height: 100%;
   .my-cart-div {
-    margin: 2% 21% 2% 10%;
+    margin: 6% 21% 2% 10%;
     height: fit-content;
     background: #ffffff 0% 0% no-repeat padding-box;
     border: 2px solid #dcdcdc;
-    h2 {
-      margin: 3% 0% 0% 5%;
-      font-size: 16px;
-      font: normal normal medium 18px/22px Lato;
+    border-radius: 3px;
+    .heading-div {
+      background: #f5f5f5 0% 0% no-repeat padding-box;
+      border: 1px solid #e4e4e4;
+      h2 {
+        margin: 2% 0% 2% 5%;
+        font-size: 16px;
+        font: normal normal medium 18px/22px Lato;
+      }
     }
     .book-info {
-      margin: 2% 50% 0% 5%;
-      // border-style: dashed;
-      display: flex; //f
+      margin: 0% 50% 0% 0%;
+      padding: 2% 0% 2% 5%;
+      border-bottom: 2px solid #dcdcdc;
+      width: 95%;
+      display: flex;
       img {
-        // border-style: dotted;
         height: 110px;
         width: 100px;
         margin: 1% 0% 0% 0%;
       }
       .details-div {
-        // border-style: double;
         background-color: $white;
         width: 80%;
         margin-left: 1%;
         h2 {
           color: $heading;
           margin: 3% 0% 0% 7%;
-          font: normal normal bold Roboto;
+          text-align: left;
+          font: normal normal bold 18px/24px Roboto;
+          letter-spacing: 0px;
+          color: #0a0102;
+          opacity: 1;
         }
         span {
           margin: 3% 0% 0% 7%;
@@ -44,6 +53,14 @@ $authurName: #9d9d9d;
           margin: 3% 0% 0% 7%;
           font: normal normal normal Roboto;
         }
+      }
+    }
+    .book-quantity-div {
+      margin: 5% 0% 0% 0%;
+      display: flex;
+      .icon-st{
+        margin: 0% 0% 0% 0%;
+        color: #9d9d9d;
       }
     }
   }
